[project]
name = "armpi-pro-client"
description = "Armpi Pro ROS noetic client for teleop"
authors = [{name = "Kyoung Choe", email = "choe.kyoung@gmail.com"}]
version = "0.0.1"
requires-python = ">=3.8,<3.9"
dependencies = ["pygame>=2.6.1,<3"]

[tool.pixi.project]
channels = ["robostack", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
ros-noetic-desktop = ">=1.5.0,<2"
ros-noetic-image-view = ">=1.15.3,<2"
ros-noetic-vision-opencv = ">=1.15.0,<2"

[tool.pixi.activation]
scripts = ["ros_setup.sh"]
